--- a/src/app/home/system-admin/overview/add-platform-dialog/add-platform-dialog.component.scss
+++ b/src/app/home/system-admin/overview/add-platform-dialog/add-platform-dialog.component.scss
@@ -43,3 +43,17 @@
 button.mat-raised-button  {
   min-width: unset;
 }
+
+.addPlatform .material-icons {
+  font-size: 16px !important;
+}
+
+.addPlatform .mat-icon-button {
+  width: 34px !important;
+  height: 34px !important;
+  line-height: 23px !important;
+}
+
+.addPlatform .mat-button-wrapper {
+  margin: 3px 0px 0px 1px !important;
+}
